# web-scraper

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: cron.yml
